[bug] [design] fix button group z-index

--- a/src/sass/partials/buttons.scss
+++ b/src/sass/partials/buttons.scss
@@ -174,6 +174,8 @@ button {
     margin-left: -1px;
     border-radius: 0;
     float: left;
+    z-index: 1;
+    position: relative;
     &:first-child {
       border-top-left-radius: $border-radius-medium;
       border-bottom-left-radius: $border-radius-medium;
@@ -181,6 +183,10 @@ button {
     &:last-child {
       border-top-right-radius: $border-radius-medium;
       border-bottom-right-radius: $border-radius-medium;
+    }
+    &.active,
+    &:active {
+      z-index: 2;
     }
   }
 }
